--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 21 18:53:23 IST 2020
-sdk.dir=C\:\\Users\\MOM\\AppData\\Local\\Android\\Sdk
+#Thu Oct 01 11:10:29 IST 2020
+sdk.dir=C\:\\Users\\Diksha\\AppData\\Local\\Android\\Sdk
